--- a/build.gradle
+++ b/build.gradle
@@ -22,16 +22,20 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'com.mysql:mysql-connector-j'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' //JPA
+	developmentOnly 'org.springframework.boot:spring-boot-devtools' //devtools
+	implementation 'org.springframework.boot:spring-boot-starter-web' //Spring Web
+	compileOnly 'org.projectlombok:lombok' //lombok : 반복 코드 간편하게 작성 가능
 	annotationProcessor 'org.projectlombok:lombok'
+
+	runtimeOnly 'com.mysql:mysql-connector-j' //mysql 연결
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' //템플릿엔진
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
 	implementation 'org.springframework.boot:spring-boot-starter'
-	implementation 'org.apache.poi:poi-ooxml:5.2.3'
+	implementation 'org.apache.poi:poi-ooxml:5.2.3' //xlxs 파일 처리
 }
 
 tasks.named('test') {
